01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voyage-ml
  labels:
    name: voyage-ml
