04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voyage-ml-service
  namespace: voyage-ml
  labels:
    app: voyage-ml-service
spec:
  type: LoadBalancer
  selector:
    app: voyage-ml-service
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
